# dados-eleicoes-basicos

./: .env.example  .gitignore  1_import_boletim_urna.go  3_import_consulta_vagas.go  4.1-insert_create_table_votos_candidatos.go  4_create_table_votos_candidatos.go  5_create_table_votos_partido.go  baixar_fotos_candidatos.py  convert_csv_to_utf8.sh  create_table_votos_candidatos.py  create_table_votos_partido.go  create_table_votos_partido.py  create_view_votos.py  descricao_arquivos.md  enforce_idempotency.sql  fix_schema.sql  go.mod  go.sum  import_boletim_urna.go  import_boletim_urna.py  import_consulta_cand.go  import_consulta_cand.py  import_consulta_vagas.py  import_csv_to_big_query_from_storage.sh  import_local_csv_to_bigquery-cidades.sh  import_local_csv_to_bigquery.sh  instrucao.md  instrucao_completa.md  requirements.txt  run_all.sh  run_pipeline.sh  sistema.md  teste.bash  truncate_all.sql
.cursor/: rules.md
app-python/: README.md  app.py  components.py  db.py  manual.md  queries.py  requirements.txt  run.sh
app-python-codex/: README.md  requirements.txt  run.sh  streamlit_app.py
app-python-minimax/: DADOS_TSE.md  PLAN.yaml  README.md  app.py  requirements.txt
app-python-trae/: README.md  requirements.txt  run.sh  streamlit_app.py
go_postgres/: 10_import_perfil_eleitorado.go  11_import_perfil_eleitor_secao.go  12_import_comparecimento_abstencao.go  13_build_catalogo_filtros.go  1_import_boletim_urna.go  1_import_boletim_urna_single.go  2_import_consulta_cand.go  3_import_consulta_vagas.go  4.1_create_table_votos_candidatos.go  4.2_create_table_votos_candidatos.go  4_create_table_votos_candidatos.go  5.1_create_table_votos_partido.go  5_create_table_votos_partido.go  6_import_municipio_tse_ibge.go  (+5 more)
rust/: Cargo.toml
rust/src/: common.rs  lib.rs
rust_postgres/: Cargo.toml  run_all.sh
rust_postgres/src/: common.rs
(+70 files in other folders)
