[package]
name = "eleicoes_etl"
version = "0.1.0"
edition = "2021"
description = "Importação TSE (boletim, consulta cand/vagas) e ETL votos — equivalente aos scripts Go."

[[bin]]
name = "1_import_boletim_urna"
path = "src/bin/1_import_boletim_urna.rs"

[[bin]]
name = "2_import_consulta_cand"
path = "src/bin/2_import_consulta_cand.rs"

[[bin]]
name = "3_import_consulta_vagas"
path = "src/bin/3_import_consulta_vagas.rs"

[[bin]]
name = "4_create_table_votos_candidatos"
path = "src/bin/4_create_table_votos_candidatos.rs"

[[bin]]
name = "5_create_table_votos_partido"
path = "src/bin/5_create_table_votos_partido.rs"

[dependencies]
anyhow = "1.0"
csv = "1.3"
dotenvy = "0.15"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
mysql = "24"
walkdir = "2.5"
